[package]
name = "pathmap"
version = "0.1.4"
edition = "2024"
description = "A path-driven, namespaced data store for Rust, powered by SQLite."
license = "MIT"
repository = "https://github.com/canmi21/pathmap"
readme = "README.md"
keywords = ["network", "server", "filesystem", "pathmap", "router"]
categories = ["network-programming", "web-programming", "development-tools"]

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
fancy-log = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
thiserror = "2"
shellexpand = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"